smeil-to-cspm/SmeilParser.py
# Generated from Smeil.g4 by ANTLR 4.7.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class SmeilParser ( Parser ):

    grammarFileName = "Smeil.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'proc'", u"'('", u"')'", u"'{'", u"'}'", 
                     u"','", u"'['", u"']'", u"'in'", u"'out'", u"'const'", 
                     u"'='", u"';'", u"'exposed'", u"'bus'", u"':'", u"'var'", 
                     u"'int'", u"'range'", u"'to'", u"'/'", u"'%'", u"'.'", 
                     u"'_'", u"'-'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"ALPHA", u"NUM", u"ALPHANUM", 
                      u"WHITESPACE" ]

    RULE_entity = 0
    RULE_process = 1
    RULE_declaration = 2
    RULE_params = 3
    RULE_param = 4
    RULE_direction = 5
    RULE_statement = 6
    RULE_busdecl = 7
    RULE_bussignaldecls = 8
    RULE_bussignaldecl = 9
    RULE_vardecl = 10
    RULE_typename = 11
    RULE_ranges = 12
    RULE_expression = 13
    RULE_binop = 14
    RULE_name = 15
    RULE_ident = 16

    ruleNames =  [ u"entity", u"process", u"declaration", u"params", u"param", 
                   u"direction", u"statement", u"busdecl", u"bussignaldecls", 
                   u"bussignaldecl", u"vardecl", u"typename", u"ranges", 
                   u"expression", u"binop", u"name", u"ident" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    ALPHA=26
    NUM=27
    ALPHANUM=28
    WHITESPACE=29

    def __init__(self, input, output=sys.stdout):
        super(SmeilParser, self).__init__(input, output=output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class EntityContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.EntityContext, self).__init__(parent, invokingState)
            self.parser = parser

        def process(self):
            return self.getTypedRuleContext(SmeilParser.ProcessContext,0)


        def getRuleIndex(self):
            return SmeilParser.RULE_entity

        def enterRule(self, listener):
            if hasattr(listener, "enterEntity"):
                listener.enterEntity(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitEntity"):
                listener.exitEntity(self)




    def entity(self):

        localctx = SmeilParser.EntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_entity)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.process()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcessContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.ProcessContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(SmeilParser.IdentContext,0)


        def params(self):
            return self.getTypedRuleContext(SmeilParser.ParamsContext,0)


        def declaration(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(SmeilParser.DeclarationContext,i)


        def statement(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.StatementContext)
            else:
                return self.getTypedRuleContext(SmeilParser.StatementContext,i)


        def getRuleIndex(self):
            return SmeilParser.RULE_process

        def enterRule(self, listener):
            if hasattr(listener, "enterProcess"):
                listener.enterProcess(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProcess"):
                listener.exitProcess(self)




    def process(self):

        localctx = SmeilParser.ProcessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_process)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(SmeilParser.T__0)
            self.state = 37
            self.ident()
            self.state = 38
            self.match(SmeilParser.T__1)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmeilParser.T__6) | (1 << SmeilParser.T__8) | (1 << SmeilParser.T__9) | (1 << SmeilParser.T__10))) != 0):
                self.state = 39
                self.params()


            self.state = 42
            self.match(SmeilParser.T__2)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmeilParser.T__13) | (1 << SmeilParser.T__14) | (1 << SmeilParser.T__16))) != 0):
                self.state = 43
                self.declaration()
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self.match(SmeilParser.T__3)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmeilParser.T__23) | (1 << SmeilParser.T__24) | (1 << SmeilParser.ALPHA) | (1 << SmeilParser.NUM) | (1 << SmeilParser.ALPHANUM))) != 0):
                self.state = 50
                self.statement()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self.match(SmeilParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.DeclarationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(SmeilParser.VardeclContext,0)


        def busdecl(self):
            return self.getTypedRuleContext(SmeilParser.BusdeclContext,0)


        def getRuleIndex(self):
            return SmeilParser.RULE_declaration

        def enterRule(self, listener):
            if hasattr(listener, "enterDeclaration"):
                listener.enterDeclaration(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDeclaration"):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = SmeilParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SmeilParser.T__16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.vardecl()
                pass
            elif token in [SmeilParser.T__13, SmeilParser.T__14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.busdecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.ParamsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def param(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.ParamContext)
            else:
                return self.getTypedRuleContext(SmeilParser.ParamContext,i)


        def getRuleIndex(self):
            return SmeilParser.RULE_params

        def enterRule(self, listener):
            if hasattr(listener, "enterParams"):
                listener.enterParams(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitParams"):
                listener.exitParams(self)




    def params(self):

        localctx = SmeilParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.param()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SmeilParser.T__5:
                self.state = 63
                self.match(SmeilParser.T__5)
                self.state = 64
                self.param()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.ParamContext, self).__init__(parent, invokingState)
            self.parser = parser

        def direction(self):
            return self.getTypedRuleContext(SmeilParser.DirectionContext,0)


        def ident(self):
            return self.getTypedRuleContext(SmeilParser.IdentContext,0)


        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SmeilParser.ExpressionContext,i)


        def getRuleIndex(self):
            return SmeilParser.RULE_param

        def enterRule(self, listener):
            if hasattr(listener, "enterParam"):
                listener.enterParam(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitParam"):
                listener.exitParam(self)




    def param(self):

        localctx = SmeilParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SmeilParser.T__6:
                self.state = 70
                self.match(SmeilParser.T__6)
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmeilParser.T__23) | (1 << SmeilParser.T__24) | (1 << SmeilParser.ALPHA) | (1 << SmeilParser.NUM) | (1 << SmeilParser.ALPHANUM))) != 0):
                    self.state = 71
                    self.expression(0)
                    self.state = 76
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 77
                self.match(SmeilParser.T__7)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 83
            self.direction()
            self.state = 84
            self.ident()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DirectionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.DirectionContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SmeilParser.RULE_direction

        def enterRule(self, listener):
            if hasattr(listener, "enterDirection"):
                listener.enterDirection(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDirection"):
                listener.exitDirection(self)




    def direction(self):

        localctx = SmeilParser.DirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_direction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmeilParser.T__8) | (1 << SmeilParser.T__9) | (1 << SmeilParser.T__10))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.StatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(SmeilParser.NameContext,0)


        def expression(self):
            return self.getTypedRuleContext(SmeilParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SmeilParser.RULE_statement

        def enterRule(self, listener):
            if hasattr(listener, "enterStatement"):
                listener.enterStatement(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStatement"):
                listener.exitStatement(self)




    def statement(self):

        localctx = SmeilParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.name(0)
            self.state = 89
            self.match(SmeilParser.T__11)
            self.state = 90
            self.expression(0)
            self.state = 91
            self.match(SmeilParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BusdeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.BusdeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(SmeilParser.IdentContext,0)


        def bussignaldecls(self):
            return self.getTypedRuleContext(SmeilParser.BussignaldeclsContext,0)


        def getRuleIndex(self):
            return SmeilParser.RULE_busdecl

        def enterRule(self, listener):
            if hasattr(listener, "enterBusdecl"):
                listener.enterBusdecl(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBusdecl"):
                listener.exitBusdecl(self)




    def busdecl(self):

        localctx = SmeilParser.BusdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_busdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SmeilParser.T__13:
                self.state = 93
                self.match(SmeilParser.T__13)


            self.state = 96
            self.match(SmeilParser.T__14)
            self.state = 97
            self.ident()
            self.state = 98
            self.match(SmeilParser.T__3)
            self.state = 99
            self.bussignaldecls()
            self.state = 100
            self.match(SmeilParser.T__4)
            self.state = 101
            self.match(SmeilParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BussignaldeclsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.BussignaldeclsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def bussignaldecl(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.BussignaldeclContext)
            else:
                return self.getTypedRuleContext(SmeilParser.BussignaldeclContext,i)


        def getRuleIndex(self):
            return SmeilParser.RULE_bussignaldecls

        def enterRule(self, listener):
            if hasattr(listener, "enterBussignaldecls"):
                listener.enterBussignaldecls(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBussignaldecls"):
                listener.exitBussignaldecls(self)




    def bussignaldecls(self):

        localctx = SmeilParser.BussignaldeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bussignaldecls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.bussignaldecl()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmeilParser.T__23) | (1 << SmeilParser.T__24) | (1 << SmeilParser.ALPHA) | (1 << SmeilParser.NUM) | (1 << SmeilParser.ALPHANUM))) != 0):
                self.state = 104
                self.bussignaldecl()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BussignaldeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.BussignaldeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(SmeilParser.IdentContext,0)


        def typename(self):
            return self.getTypedRuleContext(SmeilParser.TypenameContext,0)


        def getRuleIndex(self):
            return SmeilParser.RULE_bussignaldecl

        def enterRule(self, listener):
            if hasattr(listener, "enterBussignaldecl"):
                listener.enterBussignaldecl(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBussignaldecl"):
                listener.exitBussignaldecl(self)




    def bussignaldecl(self):

        localctx = SmeilParser.BussignaldeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_bussignaldecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.ident()
            self.state = 111
            self.match(SmeilParser.T__15)
            self.state = 112
            self.typename()
            self.state = 113
            self.match(SmeilParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.VardeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(SmeilParser.IdentContext,0)


        def typename(self):
            return self.getTypedRuleContext(SmeilParser.TypenameContext,0)


        def expression(self):
            return self.getTypedRuleContext(SmeilParser.ExpressionContext,0)


        def ranges(self):
            return self.getTypedRuleContext(SmeilParser.RangesContext,0)


        def getRuleIndex(self):
            return SmeilParser.RULE_vardecl

        def enterRule(self, listener):
            if hasattr(listener, "enterVardecl"):
                listener.enterVardecl(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitVardecl"):
                listener.exitVardecl(self)




    def vardecl(self):

        localctx = SmeilParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(SmeilParser.T__16)
            self.state = 116
            self.ident()
            self.state = 117
            self.match(SmeilParser.T__15)
            self.state = 118
            self.typename()
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SmeilParser.T__11:
                self.state = 119
                self.match(SmeilParser.T__11)
                self.state = 120
                self.expression(0)


            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SmeilParser.T__18:
                self.state = 123
                self.ranges()


            self.state = 126
            self.match(SmeilParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypenameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.TypenameContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SmeilParser.RULE_typename

        def enterRule(self, listener):
            if hasattr(listener, "enterTypename"):
                listener.enterTypename(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTypename"):
                listener.exitTypename(self)




    def typename(self):

        localctx = SmeilParser.TypenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_typename)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(SmeilParser.T__17)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RangesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.RangesContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SmeilParser.ExpressionContext,i)


        def getRuleIndex(self):
            return SmeilParser.RULE_ranges

        def enterRule(self, listener):
            if hasattr(listener, "enterRanges"):
                listener.enterRanges(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRanges"):
                listener.exitRanges(self)




    def ranges(self):

        localctx = SmeilParser.RangesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ranges)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(SmeilParser.T__18)
            self.state = 131
            self.expression(0)
            self.state = 132
            self.match(SmeilParser.T__19)
            self.state = 133
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.ExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(SmeilParser.NameContext,0)


        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SmeilParser.ExpressionContext,i)


        def binop(self):
            return self.getTypedRuleContext(SmeilParser.BinopContext,0)


        def getRuleIndex(self):
            return SmeilParser.RULE_expression

        def enterRule(self, listener):
            if hasattr(listener, "enterExpression"):
                listener.enterExpression(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExpression"):
                listener.exitExpression(self)



    def expression(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SmeilParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 136
                self.name(0)
                pass

            elif la_ == 2:
                self.state = 137
                self.name(0)
                self.state = 138
                self.match(SmeilParser.T__1)
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmeilParser.T__23) | (1 << SmeilParser.T__24) | (1 << SmeilParser.ALPHA) | (1 << SmeilParser.NUM) | (1 << SmeilParser.ALPHANUM))) != 0):
                    self.state = 139
                    self.expression(0)
                    self.state = 144
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 145
                self.match(SmeilParser.T__2)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 155
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SmeilParser.ExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 149
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 150
                    self.binop()
                    self.state = 151
                    self.expression(3) 
                self.state = 157
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class BinopContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.BinopContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SmeilParser.RULE_binop

        def enterRule(self, listener):
            if hasattr(listener, "enterBinop"):
                listener.enterBinop(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBinop"):
                listener.exitBinop(self)




    def binop(self):

        localctx = SmeilParser.BinopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_binop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            _la = self._input.LA(1)
            if not(_la==SmeilParser.T__20 or _la==SmeilParser.T__21):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.NameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(SmeilParser.IdentContext,0)


        def name(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SmeilParser.NameContext)
            else:
                return self.getTypedRuleContext(SmeilParser.NameContext,i)


        def getRuleIndex(self):
            return SmeilParser.RULE_name

        def enterRule(self, listener):
            if hasattr(listener, "enterName"):
                listener.enterName(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitName"):
                listener.exitName(self)



    def name(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SmeilParser.NameContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 30
        self.enterRecursionRule(localctx, 30, self.RULE_name, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.ident()
            self._ctx.stop = self._input.LT(-1)
            self.state = 168
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SmeilParser.NameContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_name)
                    self.state = 163
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 164
                    self.match(SmeilParser.T__22)
                    self.state = 165
                    self.name(2) 
                self.state = 170
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class IdentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SmeilParser.IdentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ALPHANUM(self):
            return self.getToken(SmeilParser.ALPHANUM, 0)

        def ALPHA(self):
            return self.getToken(SmeilParser.ALPHA, 0)

        def NUM(self):
            return self.getToken(SmeilParser.NUM, 0)

        def getRuleIndex(self):
            return SmeilParser.RULE_ident

        def enterRule(self, listener):
            if hasattr(listener, "enterIdent"):
                listener.enterIdent(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitIdent"):
                listener.exitIdent(self)




    def ident(self):

        localctx = SmeilParser.IdentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_ident)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmeilParser.T__23) | (1 << SmeilParser.T__24) | (1 << SmeilParser.ALPHA) | (1 << SmeilParser.NUM) | (1 << SmeilParser.ALPHANUM))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx, ruleIndex, predIndex):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[13] = self.expression_sempred
        self._predicates[15] = self.name_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx, predIndex):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         

    def name_sempred(self, localctx, predIndex):
            if predIndex == 1:
                return self.precpred(self._ctx, 1)
         




